@@ -1,0 +1,36 @@
+package SPVM::Net::SSLeay::OBJ;
+
+
+
+1;
+
+=head1 Name
+
+SPVM::Net::SSLeay::OBJ - OBJ Name Space in OpenSSL
+
+=head1 Description
+
+Net::SSLeay::OBJ class in L<SPVM> represents OBJ name space in OpenSSL
+
+=head1 Usage
+
+  use Net::SSLeay::OBJ;
+
+=head1 Class Methods
+
+=head1 See Also
+
+=over 2
+
+=item * L<Net::SSLeay::PEM|SPVM::Net::SSLeay::ASN1_OBJECT>
+
+=item * L<Net::SSLeay|SPVM::Net::SSLeay>
+
+=back
+
+=head1 Copyright & License
+
+Copyright (c) 2024 Yuki Kimoto
+
+MIT License
+
